# liquers

./: .gitignore  CLAUDE.md  Cargo.toml  EXAMPLE_SCENARIO_1_SUMMARY.md  ISSUES.md  README.md  UNITTEST_GUIDE.md  liquers-designer.skill  liquers-unittest.skill  plan20260707.md  review20260707.md
liquers-axum/: Cargo.toml  INTEGRATION_TESTS_CORNER_CASES.md  INTEGRATION_TESTS_SUMMARY.md  README.md
liquers-axum/examples/: WEBSOCKET_EXAMPLE.md  assets_recipes_basic.rs  basic_server.rs  custom_config.rs  custom_environment.rs  error_handling.rs  websocket_client.rs
liquers-axum/src/: axum_integration.rs  core_handlers.rs  environment.rs  lib.rs  main.rs  store_handlers.rs  utils.rs  value.rs
liquers-axum/src/api_core/: error.rs  format.rs  mod.rs  response.rs
liquers-axum/src/assets/: builder.rs  handlers.rs  mod.rs  tests.rs  websocket.rs
liquers-axum/src/query/: builder.rs  handlers.rs  mod.rs
liquers-axum/src/recipes/: builder.rs  handlers.rs  mod.rs  tests.rs
liquers-axum/src/store/: builder.rs  handlers.rs  mod.rs
liquers-axum/tests/: assets_recipes_integration.rs  query_api_integration.rs  store_api_integration.rs
liquers-axum/xxx/: recipes.yaml
liquers-core/: Cargo.toml
liquers-core/src/: assets.rs  assets2.rs  cache.rs  command_metadata.rs  commands.rs  commands2.rs  context.rs  context2.rs  dependencies.rs  error.rs  expiration.rs  icons.rs  interpreter.rs  interpreter2.rs  lib.rs  maybe_send.rs  media_type.rs  metadata.rs  parse.rs  plan.rs  query.rs  recipes.rs  recipes2.rs  state.rs  store.rs  value.rs
liquers-core/tests/: asset_failure_contract.rs  async_hellow_world.rs  async_hellow_world1.rs  dependency_manager_integration.rs  dependency_scheduling.rs  expiration_integration.rs  injection.rs  manager_parametric.rs  volatility_integration.rs
liquers-lib/: Cargo.toml
liquers-lib/examples/: egui_async_prototype.rs  ui_button_app.rs  ui_hello.rs  ui_payload_app.rs  ui_query_console_app.rs  ui_spec_demo.rs  ui_spec_interactive.rs  ui_spec_simple.rs
liquers-lib/examples-web/ui_spec_demo/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  playwright.config.ts
liquers-lib/examples-web/ui_spec_demo/src/: lib.rs
liquers-lib/examples-web/ui_spec_demo/tests/: webui.spec.ts
liquers-lib/src/: commands.rs  environment.rs  lib.rs  utils.rs  value.rs
liquers-lib/src/egui/: commands.rs  dataframe.rs  mod.rs  widgets.rs
liquers-lib/src/image/: color.rs  commands.rs  drawing.rs  edges.rs  filtering.rs  format.rs  geometric.rs  info.rs  io.rs  mod.rs  morphology.rs  raster_image.rs  serde.rs  util.rs
liquers-lib/src/polars/: aggregation.rs  filtering.rs  info.rs  io.rs  mod.rs  selection.rs  serde.rs  sorting.rs  util.rs
liquers-lib/src/ui/: action.rs  app_state.rs  commands.rs  element.rs  handle.rs  message.rs  mod.rs  payload.rs  resolve.rs  runner.rs  shortcuts.rs  ui_context.rs
liquers-lib/src/ui/web/: app.rs  dataframe.rs  html.rs  mod.rs  widgets.rs
liquers-lib/src/ui/widgets/: markdown_element.rs  mod.rs  query_console_element.rs  ui_spec_element.rs
liquers-lib/src/value/: extended.rs  mod.rs  simple.rs
liquers-lib/tests/: commands_doc.rs  image_value_serde.rs  plan_namespace_resolution.rs  polars_commands.rs  polars_value_serde.rs  query_console_integration.rs  ui_runner.rs  ui_shortcuts_integration.rs  ui_spec_integration.rs  webui_ssr.rs
liquers-macro/: Cargo.toml
liquers-macro/src/: lib.rs  registration.rs  versioning.rs
liquers-py/: Cargo.toml  pyproject.toml
liquers-py/src/: cache.rs  command_metadata.rs  commands.rs  context.rs  dependencies.rs  error.rs  expiration.rs  interpreter.rs  lib.rs  metadata.rs  parse.rs  plan.rs  query.rs  recipes.rs  state.rs  store.rs  value.rs
liquers-py/tests/: test_basic_objects.py  test_parser.py
liquers-store/: Cargo.toml
liquers-store/src/: config.rs  lib.rs  opendal_store.rs  store_builder.rs
specs/: ASSETS.md  ASSET_LIFECYCLE.md  ASSET_SET_OPERATION.md  COMMAND_REGISTRATION_GUIDE.md  DEPENDENCIES_STATUS.md  EXAMPLE2-CUSTOM-CONFIG.md  EXAMPLE_SCENARIO_1.md  IMAGE_COMMAND_LIBRARY.md  ISSUES.md  JOBQUEUE_FIX.md  PAYLOAD_GUIDE.md  PHASE3-TESTS-INDEX.md  PHASE3-UNIT-TESTS-IMPLEMENTATION-GUIDE.md  PHASE3-UNIT-TESTS-SUMMARY.md  PHASE3-UNIT-TESTS.md  POLARS_COMMAND_LIBRARY.md  PROJECT_OVERVIEW.md  PYTHON-WRAPPER-ARCHITECTURE.md  PYTHON-WRAPPER-HIGH-LEVEL-DESIGN.md  QUERY_CONSOLE_ELEMENT_EXAMPLE3.md  REGISTER_COMMAND_FSD.md  STORE_CONFIG_FSD.md  UI_DIOXUS_DESIGN_NOTES.md  UI_INTERFACE_FSD.md  UI_INTERFACE_PHASE1_FSD.md  UI_INTERFACE_PHASE1a_FSD.md  UI_INTERFACE_PHASE1b.md  UI_PAYLOAD_DESIGN.md  UI_RATATUI_DESIGN_NOTES.md  UI_WEB_DESIGN_NOTES.md  WEB_API_SPECIFICATION.md  todo20260219.md
specs/FEATURES/: ASSETS-FIX1.md  ASSETS-IMPROVEMENTS-ISSUE4-IMPLEMENTATION-PLAN.md  ASSETS-IMPROVEMENTS.md  BENCHMARK-SUITE.md  COMBINED-EXPIRES.md  COMBINED-VALUE-DISCRIMINATION.md  COMMAND-METADATA-ENHANCEMENTS.md  EGUI-ASSET-MANAGER-INTEGRATION.md  EGUI-VALUE-RENDERING.md  EXPIRATION-SAFETY-IMPLEMENTATION-PLAN.md  EXPIRATION-SAFETY.md  EXTENDED-FAST-TRACK.md  FEATURES.md  IMAGE-SERIALIZATION-FEATURE-GAPS.md  KEY-LEVEL-ACL.md  POLARS-FEATURE-GAPS.md  PYTHON-BASIC-OBJECTS.md  SCHEDULER-IMPROVEMENTS.md  TECHNICAL-DEBT-1.md  VALUE-DESCRIPTION.md  plan-init-section.md
specs/async-wasm-refactor/: DESIGN.md  phase1-high-level-design.md  phase2-architecture.md  phase3-examples.md  phase4-implementation.md
specs/axum-assets-recipes-api/: DESIGN.md  EXAMPLE_SCENARIO_1_FORMATTED.md  EXAMPLE_SCENARIO_1_PRIMARY_USE_CASES.md  EXAMPLE_SCENARIO_1_SUMMARY.md  phase1-high-level-design.md  phase2-architecture.md  phase3-examples.md  phase4-implementation.md
specs/context-param-order/: FINDINGS.md  SOLUTION.md
specs/dependency-eval-blocking/: DESIGN.md  phase1-high-level-design.md  phase2-architecture.md  phase3-examples.md  phase4-implementation.md
specs/dependency-management/: DESIGN.md  phase1-high-level-design.md  phase2-architecture.md  phase3-examples.md  phase4-implementation.md  plan-init-section.md
specs/dependency-scheduling/: DESIGN.md  phase1-high-level-design.md  (+3 more)
(+92 files in other folders)
