[package]
name = "liquers-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
liquers-core={path="../liquers-core"}
liquers-store={path="../liquers-store"}
serde = "1.0.181"
serde_derive = "1.0.181"
serde_json = "1.0.104"
serde_yaml = "0.9.25"
bytes = "1.8.0"
async-trait = "0.1.80"


axum = { version = "0.8.1", features = ["macros"] }
itertools = "0.14.0"
nom = "8.0.0"
nom_locate = "5.0.0"
regex = "1.9.3"
thiserror = "2.0"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.5.1"

[features]
default=["async_store"]
async_store=[]
