[package]
name = "liquers-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
itertools = "0.11.0"
nom = "7.1.3"
nom_locate = "4.1.0"
regex = "1.9.3"
serde = "1.0.181"
serde_derive = "1.0.181"
serde_json = "1.0.104"
serde_yaml = "0.9.25"
thiserror = "1.0.44"
chrono = "0.4.31"
