[package]
name = "liquers-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"]

[features]
default=["async_store"]
async_store=["futures", "async-trait"]
tokio_exec=["futures", "async-trait", "async_store"]

[dependencies]
itertools = "0.13.0"
nom = "7.1.3"
nom_locate = "4.1.0"
regex = "1.9.3"
serde = "1.0.181"
serde_derive = "1.0.181"
serde_json = "1.0.104"
serde_yaml = "0.9.25"
thiserror = "1.0.44"
chrono = "0.4.31"
tokio = { version = "1.37.0", features = ["sync", "rt"] }

[dev-dependencies]
tokio = {version="1.37.0", features = ["full"]}

[dependencies.futures]
version = "0.3.31"
optional=true

[dependencies.async-trait]
version = "0.1.80"
optional=true
