[package]
name = "liquers-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["egui", "image-support"]
image-support = ["imageproc"]
# egui reference backend (optional so a webui-only build compiles no egui)
egui = ["dep:egui", "dep:eframe", "dep:egui_plot", "dep:egui_extras", "dep:egui_commonmark"]
# web backend (SSR strings on all targets; DOM on wasm)
webui = ["dep:web-sys", "dep:wasm-bindgen", "dep:js-sys", "dep:wasm-bindgen-futures", "dep:pulldown-cmark", "dep:console_error_panic_hook"]

[dependencies]
tokio = { version = "1.47.1", features = ["sync", "rt", "macros", "time"] }
liquers-core={path="../liquers-core"}
liquers-macro={path="../liquers-macro"}
serde = "1.0.181"
serde_derive = "1.0.181"
serde_json = "1.0.104"
serde_yaml = "0.9.33"
bytes = "1.8.0"
base64 = "0.22.1"
async-trait = "0.1.80"
# egui family — optional, enabled by the `egui` feature
egui = { version = "0.33.0", optional = true }
eframe = { version = "0.33.0", optional = true }
egui_plot = { version = "0.34.0", optional = true }
polars = { version = "0.53.0", features = ["lazy", "temporal", "csv", "parquet"] }
reqwest = { version = "0.12.24", features = ["json"] }
image = "0.25.9"
imageproc = { version = "0.25.0", optional = true }
resvg = "0.45.1"
usvg = "0.45.1"
tiny-skia = "0.11"
futures = "0.3.31"
egui_extras = { version = "0.33.3", optional = true }
chrono = { version = "0.4.41", features = ["alloc"] }
typetag = "0.2"
egui_commonmark = { version = "0.22.0", optional = true }
openssl = { version = "0.10", features = ["vendored"] }
# webui family — optional, enabled by the `webui` feature
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
pulldown-cmark = { version = "0.12", optional = true, default-features = false }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "Document", "Window", "Element", "HtmlElement", "HtmlInputElement", "Node",
  "Event", "EventTarget", "InputEvent", "KeyboardEvent", "DomTokenList",
] }

[dev-dependencies]
liquers-store = { path = "../liquers-store" }
opendal = { version = "0.55", features = ["services-fs"] }

# egui-based examples: only build when the `egui` feature is enabled, so a
# webui-only / no-default-features build skips them instead of failing.
[[example]]
name = "egui_async_prototype"
required-features = ["egui"]
[[example]]
name = "ui_button_app"
required-features = ["egui"]
[[example]]
name = "ui_hello"
required-features = ["egui"]
[[example]]
name = "ui_payload_app"
required-features = ["egui"]
[[example]]
name = "ui_query_console_app"
required-features = ["egui"]
[[example]]
name = "ui_spec_demo"
required-features = ["egui"]
[[example]]
name = "ui_spec_interactive"
required-features = ["egui"]
[[example]]
name = "ui_spec_simple"
required-features = ["egui"]
