[package]
name = "liquers-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "liquers_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
liquers-core={path="../liquers-core"}
serde = "1.0.181"
serde_derive = "1.0.181"
serde_json = "1.0.104"
serde_yaml = "0.9.25"
