[package]
name = "liquers-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
liquers-core={path="../liquers-core"}
serde = "1.0.181"
serde_derive = "1.0.181"
serde_json = "1.0.104"
serde_yaml = "0.9.33"
opendal = "0.55.0"
bytes = "1.8.0"
async-trait = "0.1.80"
toml = { version = "0.8", optional = true }

[features]
default=["async_store"]
async_store=[]
toml=["dep:toml"]

[dev-dependencies]
tokio = {version="1.47.1", features = ["full"]}
liquers-macro={path="../liquers-macro"}
opendal = { version = "0.55", features = ["services-fs"] }
