[package]
name = "ui_spec_demo_web"
version = "0.1.0"
edition = "2021"

# Standalone crate (its own workspace root) so it does not inherit the parent
# workspace's members or dev-dependencies.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
liquers-core = { path = "../../../liquers-core" }
liquers-lib = { path = "../..", default-features = false, features = ["webui"] }
liquers-macro = { path = "../../../liquers-macro" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
# needed because the register_lui_commands! / register_command! macros expand into
# this crate and reference these paths.
futures = "0.3"
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "console"] }
tokio = { version = "1.47.1", features = ["sync", "rt", "macros", "time"] }
